syntax = "proto3";

package app;

option php_namespace = "App\\User\\DTO";
option php_metadata_namespace = "App\\User\\GPBMetadata";

message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  repeated Role roles = 4;
  Profile profile = 5;
}

message Role {
  uint32 id = 1;
  string name = 2;
}

message Profile {
  string firstName = 1;
  string lastName = 2;
  string phone = 3;
  Address address = 4;
  repeated SocialAccount accounts = 5;
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  string country = 5;
}

message SocialAccount {
  string name = 1;
  string url = 2;
}